# diet-roulette

./: .gitignore  LICENSE  README.md  pyproject.toml
diet_roulette/: __init__.py  __main__.py  cli.py  htmlreport.py  planner.py  prefs.py  tracker.py  wheel.py
diet_roulette/data/: foods.json
tests/: test_htmlreport.py  test_modifiers.py  test_planner.py  test_tracker.py  test_wheel.py
