[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "diet-roulette"
version = "0.1.0"
description = "🎡 Spin the wheel and let fate pick your next healthy meal — a fun little diet CLI."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Nikolai Ramirez" }]
keywords = ["diet", "cli", "meals", "nutrition", "fun"]
dependencies = []  # standard library only

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
diet-roulette = "diet_roulette.cli:main"

[tool.setuptools.packages.find]
include = ["diet_roulette*"]

[tool.setuptools.package-data]
diet_roulette = ["data/*.json"]
